force-app/main/default/objects/Application__c/fields/Accounts_On_File__c.field-meta.xml
<CustomField>
    <fullName>Accounts_On_File__c</fullName>
    <description>Accounts On File</description>
    <inlineHelpText>Accounts On File</inlineHelpText>
    <label>Accounts On File</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>