force-app/main/default/objects/Application__c/fields/Acknowledged_Card_not_Included_in_BKCP__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Card_not_Included_in_BKCP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User acknowledges that Card will not be included in their BKCP</inlineHelpText>
    <label>Acknowledged Card not Included in BKCP</label>
    <type>Checkbox</type>
</CustomField>