force-app/main/default/objects/Application__c/fields/Acquisition_Code__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Code__c</fullName>
    <description>Acquisition Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Acquisition Code</inlineHelpText>
    <label>Acquisition Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>