force-app/main/default/objects/Application__c/fields/Adjudication_Decision_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjudication_Decision_Last_Changed_Date__c</fullName>
    <description>Adjudication Decision Last Changed Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Adjudication Decision Last Changed Date</inlineHelpText>
    <label>Adjudication Decision Last Changed Date</label>
    <type>DateTime</type>
</CustomField>