force-app/main/default/objects/Application__c/fields/Adjudication_Response__c.field-meta.xml
<CustomField>
    <fullName>Adjudication_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Adjudication Response</inlineHelpText>
    <label>Adjudication Response</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>