force-app/main/default/objects/Application__c/fields/Affiliate_Partner_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Partner_Unique_ID__c</fullName>
    <description>Loans Canada Partner ID Assigned to Fidem</description>
    <formula>&quot;p63ee58e03653e&quot;</formula>
    <inlineHelpText>Loans Canada Partner ID Assigned to Fidem</inlineHelpText>
    <label>Affiliate Partner Unique ID</label>
    <type>Text</type>
</CustomField>