force-app/main/default/objects/Application__c/fields/Affiliate_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Affiliate Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>