force-app/main/default/objects/Application__c/fields/Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alias Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>