force-app/main/default/objects/Application__c/fields/AML_Response__c.field-meta.xml
<CustomField>
    <fullName>AML_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>AML Response</inlineHelpText>
    <label>AML Response</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>