force-app/main/default/objects/Application__c/fields/Application_Fullfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Fullfillment_Status__c</fullName>
    <label>Application Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Calculator Completed</fullName>
            </value>
            <value>
                <fullName>Tele-Scripting Completed</fullName>
            </value>
            <value>
                <fullName>Executing Loan Document</fullName>
            </value>
            <value>
                <fullName>Loan Document Executed</fullName>
            </value>
            <value>
                <fullName>CSR Reviewed</fullName>
            </value>
            <value>
                <fullName>PAP Information uploaded</fullName>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
            </value>
            <value>
                <fullName>Approved for Funding</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Ready For Export</fullName>
            </value>
            <value>
                <fullName>CSR Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>