force-app/main/default/objects/Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Application Number</inlineHelpText>
    <label>Application Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>