force-app/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <inlineHelpText>Application Status</inlineHelpText>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFSI Scripting</fullName>
            </value>
            <value>
                <fullName>Analyst Declined</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>CC Creation</fullName>
            </value>
            <value>
                <fullName>CLI Scripting</fullName>
            </value>
            <value>
                <fullName>Completed - CLI</fullName>
            </value>
            <value>
                <fullName>Completed - Loan</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Email-Auth Sent</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Fraud Investigation</fullName>
            </value>
            <value>
                <fullName>Loan Delivery</fullName>
            </value>
            <value>
                <fullName>Manager Approval</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Scripting Required</fullName>
            </value>
            <value>
                <fullName>Waiting for Loan Docs</fullName>
            </value>
            <value>
                <fullName>Waiting for Loan Docs - Auth Passed</fullName>
            </value>
            <value>
                <fullName>BK/CP No Disch</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Analyst Approved</fullName>
            </value>
            <value>
                <fullName>Scripting</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>System Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>