force-app/main/default/objects/Application__c/fields/Authorized_Credit_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Credit_Check_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Credit Check Date</label>
    <type>Date</type>
</CustomField>