force-app/main/default/objects/Application__c/fields/Bad_Debt_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_Write_Off__c</fullName>
    <description>Bad Debt Write Off</description>
    <inlineHelpText>Bad Debt Write Off</inlineHelpText>
    <label>Bad Debt Write Off</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>