force-app/main/default/objects/Application__c/fields/Bankruptcy_Completion_Year__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Completion_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bankruptcy Completion Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>