force-app/main/default/objects/Application__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <description>Call_Status__c</description>
    <inlineHelpText>Call_Status__c</inlineHelpText>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
                <default>true</default>
                <label>Complete</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>TimedOut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>