force-app/main/default/objects/Application__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <description>Dummy campaign code added for third party trustee product project. This code is to differentiate between normal Fidem applications and third party trustee products.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Campaign Code</inlineHelpText>
    <label>Campaign Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>