force-app/main/default/objects/Application__c/fields/Canaccede_Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_Marketing_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data stored from Canaccede landing page Marketing Consent cehckbox</description>
    <label>Canaccede Marketing Consent</label>
    <type>Checkbox</type>
</CustomField>