force-app/main/default/objects/Application__c/fields/Canadian_SIN__c.field-meta.xml
<CustomField>
    <fullName>Canadian_SIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canadian SIN</inlineHelpText>
    <label>Canadian SIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>