force-app/main/default/objects/Application__c/fields/Client_IP__c.field-meta.xml
<CustomField>
    <fullName>Client_IP__c</fullName>
    <description>Client IP</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Client IP</inlineHelpText>
    <label>Client IP</label>
    <length>60</length>
    <type>Text</type>
</CustomField>