force-app/main/default/objects/Application__c/fields/Commission_Soup_Tracker_Id__c.field-meta.xml
<CustomField>
    <fullName>Commission_Soup_Tracker_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Soup Tracker Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>