force-app/main/default/objects/Application__c/fields/Completed_CreditCard_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_CreditCard_Date__c</fullName>
    <formula>DATEVALUE( Completed_CreditCard_DateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed CreditCard Date</label>
    <type>Date</type>
</CustomField>