force-app/main/default/objects/Application__c/fields/Completed_CreditCard_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Completed_CreditCard_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed CreditCard DateTime</label>
    <type>DateTime</type>
</CustomField>