force-app/main/default/objects/Application__c/fields/Consumer_Legal_Consent__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Legal_Consent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Legal Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>