force-app/main/default/objects/Application__c/fields/Consumer_Legal_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Legal_Consent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Legal Consent Date</label>
    <type>Date</type>
</CustomField>