force-app/main/default/objects/Application__c/fields/Consumer_Proposal_Completion_Year__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Proposal_Completion_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Proposal Completion Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>