force-app/main/default/objects/Application__c/fields/credit_limit_for_funded_applications__c.field-meta.xml
<CustomField>
    <fullName>credit_limit_for_funded_applications__c</fullName>
    <formula>IF( 
 ISPICKVAL(Decision__c,&apos;Completed&apos;), 
  Lender_Approved_Amount__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit for Funded Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>