force-app/main/default/objects/Application__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>