force-app/main/default/objects/Application__c/fields/CSR_Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>CSR_Manual_Review_Reason__c</fullName>
    <description>CSR Manual Review Reason</description>
    <inlineHelpText>CSR Manual Review Reason</inlineHelpText>
    <label>CSR Manual Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Hit – Adjudication</fullName>
            </value>
            <value>
                <fullName>No Hit – AML</fullName>
            </value>
            <value>
                <fullName>System Not Reachable – Adjudication</fullName>
            </value>
            <value>
                <fullName>System Not Reachable - AML</fullName>
            </value>
            <value>
                <fullName>System Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>