force-app/main/default/objects/Application__c/fields/CSR_Review__c.field-meta.xml
<CustomField>
    <fullName>CSR_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR Review</label>
    <type>Checkbox</type>
</CustomField>