force-app/main/default/objects/Application__c/fields/CSR_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>CSR_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have CSRs reviewed the application?</description>
    <inlineHelpText>Have CSRs reviewed the application?</inlineHelpText>
    <label>CSR Reviewed</label>
    <type>Checkbox</type>
</CustomField>