force-app/main/default/objects/Application__c/fields/CSR_Rework__c.field-meta.xml
<CustomField>
    <fullName>CSR_Rework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR Rework</label>
    <type>Checkbox</type>
</CustomField>