force-app/main/default/objects/Application__c/fields/CurrentBKCP__c.field-meta.xml
<CustomField>
    <fullName>CurrentBKCP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CurrentBKCP</inlineHelpText>
    <label>CurrentBKCP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>