force-app/main/default/objects/Application__c/fields/Decision_Result__c.field-meta.xml
<CustomField>
    <fullName>Decision_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Decision Result</inlineHelpText>
    <label>Decision Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>