force-app/main/default/objects/Application__c/fields/Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Decision Status</inlineHelpText>
    <label>Decision Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>