force-app/main/default/objects/Application__c/fields/Decision_Summary__c.field-meta.xml
<CustomField>
    <fullName>Decision_Summary__c</fullName>
    <description>Decision Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Decision Summary</inlineHelpText>
    <label>Adjudication Decision Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>