force-app/main/default/objects/Application__c/fields/Decision_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Adjudication Decision Timestamp</inlineHelpText>
    <label>Adjudication Decision Timestamp</label>
    <type>DateTime</type>
</CustomField>