force-app/main/default/objects/Application__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Adjudication Decline Reason</description>
    <inlineHelpText>Adjudication Decline Reason</inlineHelpText>
    <label>Adjudication Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjudicated amount over max credit</fullName>
            </value>
            <value>
                <fullName>AML failed</fullName>
            </value>
            <value>
                <fullName>CLI</fullName>
            </value>
            <value>
                <fullName>Customer decline - Alternate Card</fullName>
            </value>
            <value>
                <fullName>Customer decline  - Interest rate</fullName>
            </value>
            <value>
                <fullName>Customer decline  - Monthly Fee</fullName>
            </value>
            <value>
                <fullName>Debit Ratio High</fullName>
            </value>
            <value>
                <fullName>Duplicate application</fullName>
            </value>
            <value>
                <fullName>Fraud not cleared</fullName>
            </value>
            <value>
                <fullName>Legal item</fullName>
            </value>
            <value>
                <fullName>Thin bureau</fullName>
            </value>
            <value>
                <fullName>Unable to confirm income</fullName>
            </value>
            <value>
                <fullName>Confirmed Fraud</fullName>
            </value>
            <value>
                <fullName>Utilization of credit</fullName>
            </value>
            <value>
                <fullName>Credit need not found</fullName>
            </value>
            <value>
                <fullName>Derog not included in BKCP</fullName>
            </value>
            <value>
                <fullName>Customer declined – Approved amount</fullName>
            </value>
            <value>
                <fullName>Customer declined – Negative Customer Experience</fullName>
            </value>
            <value>
                <fullName>Customer declined – Funding delays</fullName>
            </value>
            <value>
                <fullName>Customer declined – consolidation/balance transfer</fullName>
            </value>
            <value>
                <fullName>Customer declined – Refused to complete loan process</fullName>
            </value>
            <value>
                <fullName>Customer declined – Received loan from another party</fullName>
            </value>
            <value>
                <fullName>DSR Failed</fullName>
            </value>
            <value>
                <fullName>Employment Length Failed</fullName>
            </value>
            <value>
                <fullName>Annual Income Failed</fullName>
            </value>
            <value>
                <fullName>BK Low Credit Score</fullName>
            </value>
            <value>
                <fullName>Customer In Credit Counselling</fullName>
            </value>
            <value>
                <fullName>CP Low Credit Score</fullName>
            </value>
            <value>
                <fullName>Payday Loans</fullName>
            </value>
            <value>
                <fullName>Bad Revolving Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>