force-app/main/default/objects/Application__c/fields/Disclosure_Statement_Presented__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Statement_Presented__c</fullName>
    <label>Disclosure Statement Presented</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affirm Financial MasterCard Manitoba Residents - 39.99%</fullName>
            </value>
            <value>
                <fullName>Fidem Finance MasterCard - Home Owner</fullName>
            </value>
            <value>
                <fullName>Fidem Finance MasterCard - Rental</fullName>
            </value>
            <value>
                <fullName>Third Party MasterCard - Home Owner</fullName>
            </value>
            <value>
                <fullName>Third Party MasterCard - Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>