force-app/main/default/objects/Application__c/fields/Email_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Email_Auth_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Auth Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>