force-app/main/default/objects/Application__c/fields/Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Employer_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>