force-app/main/default/objects/Application__c/fields/Employer_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Employer_PO_Box__c</fullName>
    <description>Employer PO Box</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Employer PO Box</inlineHelpText>
    <label>Employer PO Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>