force-app/main/default/objects/Application__c/fields/Employer_Province__c.field-meta.xml
<CustomField>
    <fullName>Employer_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>