force-app/main/default/objects/Application__c/fields/Employer_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Street_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>