force-app/main/default/objects/Application__c/fields/Employer_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Unit_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Unit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>