force-app/main/default/objects/Application__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>