force-app/main/default/objects/Application__c/fields/Estate_ID__c.field-meta.xml
<CustomField>
    <fullName>Estate_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estate ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>