force-app/main/default/objects/Application__c/fields/Fidem_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Fidem_Application_Number__c</fullName>
    <description>Auto number for Fidem applications</description>
    <displayFormat>FDM{00000}</displayFormat>
    <inlineHelpText>Auto number for Fidem applications</inlineHelpText>
    <label>Fidem Application Number</label>
    <type>AutoNumber</type>
</CustomField>